--- a/pertemuan4_71180266/app/src/main/res/layout/activity_main.xml
+++ b/pertemuan4_71180266/app/src/main/res/layout/activity_main.xml
@@ -81,7 +81,7 @@
             android:text="Register Now!"
             android:textSize="16sp"
             android:textAllCaps="false"
-            />
+            android:background="?android:attr/selectableItemBackground"/>
 
     </LinearLayout>
 
