--- a/pertemuan8_71180266/app/src/main/res/menu/menu_default.xml
+++ b/pertemuan8_71180266/app/src/main/res/menu/menu_default.xml
@@ -11,4 +11,9 @@
         android:icon="@mipmap/settings_foreground"
         android:title="Settings"
         app:showAsAction="always"/>
+
+    <item android:id="@+id/messages"
+        android:icon="@mipmap/messages_foreground"
+        android:title="Messages"
+        app:showAsAction="always"/>
 </menu>
